# russian-stocks-crawler

./: .env.dist  Dockerfile  README.md  docker-compose.yaml  heroku.yaml  heroku.yml  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  pythonapp.yml
stocks/: __init__.py  items.py  pipelines.py  processors.py  settings.py
stocks/spiders/: __init__.py  dohod.py  quotes.py  smartlab.py
